tests/paczka1/fuzzy1/89952193.err
Error in line 3: SBXlPU2cXX A374 54,0
Error in line 9: AJqGF5Pg A374 73,8
Error in line 8: CIk2j A374 94,2
Error in line 15: CIk2j A918 26,0
Error in line 19: A322 A374 61,7
Error in line 10: SBXlPU2cXX A322 192,9
Error in line 30: 76rxQnLJCMq A322 28,4
Error in line 27: tqW30GurJr A322 3,9
